<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/account_menu_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/account_menu_add"
        app:showAsAction="always">
    </item>
   
    <!-- More -->
    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
         app:showAsAction="always"
        android:title="More">
        <menu>
            <item
                android:id="@+id/account_menu_filter"
                android:icon="@android:drawable/ic_menu_info_details"
                android:showAsAction="never"
                android:title="@string/account_menu_filter"
                app:showAsAction="never">
            </item>
            <item
                android:id="@+id/account_menu_properties"
                android:icon="@android:drawable/ic_menu_info_details"
                 android:showAsAction="never"
                android:title="@string/account_menu_settings"
                app:showAsAction="never">
            </item>
        </menu>
    </item>

</menu>