<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.coffeearmy.piggybank"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edtNameAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/account_label" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtInitialQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/edtNameAccount"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/Quantity_account"
        android:inputType="numberDecimal" />

    <ViewSwitcher
        android:id="@+id/viewSwitcherAccountDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtInitialQuantity"
        android:fitsSystemWindows="true"
        android:measureAllChildren="false"
        android:paddingBottom="8dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imgIconTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_action_new_label" />

            <com.coffeearmy.piggybank.view.CustomIcon
                android:id="@+id/imgSelectTag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/imgIconTag"
                app:endColor="#80FF00FF"
                app:startColor="#FFFF0000" />

            <TextView
                android:id="@+id/txtvDeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imgSelectTag"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:paddingRight="8dp"
                android:text="@string/ic_delete"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/Holo_red" />
        </RelativeLayout>

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/new_account_dialog2"
            android:visibility="gone" />
    </ViewSwitcher>

</RelativeLayout>